--- a/styles/mobileresponsive.css
+++ b/styles/mobileresponsive.css
@@ -1,4 +1,5 @@
 @media screen and (max-width:576px) {
+    /* nav responsive start from here */
     .nav-container{
         flex-direction: column;
     }
@@ -19,4 +20,5 @@
     nav{
         box-shadow: none;
     }
+    /* nav responsive ends here */
 }
