--- a/styles/style.css
+++ b/styles/style.css
@@ -1,77 +1,129 @@
 /* font style from google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,700;0,800;1,400&family=Poppins:wght@500;600;700;800&family=Work+Sans:wght@500;600;700;800;900&display=swap');
 
-body{
+body {
     font-family: 'Lato', sans-serif;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Poppins', sans-serif;
-font-family: 'Work Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Work Sans', sans-serif;
 }
 
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
 
 /* nav section start from here */
-nav{
+nav {
     background: #FFF;
-box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
-padding: 25px 0px 30px;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+    padding: 25px 0px 30px;
 }
-.nav-container{
+
+.nav-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    max-width: 1400px;
+    max-width: 1100px;
     margin: 0px auto;
 }
 
-.logo-container{
+.logo-container {
     display: flex;
     gap: 10px;
     align-items: center;
 }
 
-.logo-container > img{
+.logo-container>img {
     width: 60px;
 }
 
-.logo-container h3{
+.logo-container h3 {
     text-align: center;
-font-size: 30px;
-font-weight: 700;
+    font-size: 30px;
+    font-weight: 700;
 }
 
-.logo-container span{
+.logo-container span {
     color: #FF42A5;
 }
 
-.nav-option-container{
+.nav-option-container {
     display: flex;
     align-items: center;
     gap: 20px;
-    
-}
-.nav-option-container a{
-  text-decoration: none;
-  color: #3C354F;
-text-align: center;
-font-size: 18px;
-font-weight: 500;
 
 }
 
-.nav-option-container .first-option{
+.nav-option-container a {
+    text-decoration: none;
+    color: #3C354F;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+
+}
+
+.nav-option-container .first-option {
     display: flex;
     gap: 20px;
 }
 
-.nav-option-container .second-option{
+.nav-option-container .second-option {
     display: flex;
     gap: 16px;
     padding: 10px 15px;
     border-radius: 8px;
-background: rgba(11, 2, 35, 0.10);
+    background: rgba(11, 2, 35, 0.10);
 }
 
+/* nav section ends here */
+
+/* banner section starts from here */
+.banner-container {
+    border: 1px solid red;
+    max-width: 1100px;
+    margin: 40px auto 0px;
+    min-height: 300px;
+    display: flex;
+}
+
+.banner-title-container {
+    border: 1px solid blue;
+    width: 50%;
+}
+
+.banner-image-container {
+    border: 1px solid green;
+    width: 50%;
+}
+
+.banner-image-container img {
+    width: 100%;
+    height: 96%;
+}
+
+.banner-title-container h3 {
+    color: #0B0223;
+    font-size: 30px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.banner-title-container h1 {
+    font-size: 60px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.banner-title-container p{
+    color: #534C64;
+font-size: 16px;
+font-weight: 500;
+line-height: normal;
+text-transform: lowercase;
+}
