added banner section with mobile responsive

--- a/styles/mobileresponsive.css
+++ b/styles/mobileresponsive.css
@@ -21,4 +21,20 @@
         box-shadow: none;
     }
     /* nav responsive ends here */
+    /* banner responsive starts form here */
+    .banner-section{
+        background: none;
+    }
+    .banner-container {
+       flex-direction: column-reverse;
+    }
+    .banner-title-container {
+        width:fit-content;
+    }
+    .banner-image-container {
+        width: 74%;
+    }
+    .banner-image-container img {
+        padding-bottom: 50px;
+    }
 }
