--- a/styles/style.css
+++ b/styles/style.css
@@ -80,50 +80,84 @@ nav {
 /* nav section ends here */
 
 /* banner section starts from here */
+.banner-section{
+    background-image: url(../images/Group\ 14.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: -660px 0px;
+}
+
 .banner-container {
-    border: 1px solid red;
     max-width: 1100px;
-    margin: 40px auto 0px;
+    margin: 0px auto ;
     min-height: 300px;
     display: flex;
+    align-items: center;
 }
 
 .banner-title-container {
-    border: 1px solid blue;
     width: 50%;
 }
 
 .banner-image-container {
-    border: 1px solid green;
     width: 50%;
 }
 
 .banner-image-container img {
     width: 100%;
-    height: 96%;
+    height: 100%;
 }
 
 .banner-title-container h3 {
     color: #0B0223;
-    font-size: 30px;
+    font-size: 34px;
     font-weight: 600;
     text-transform: uppercase;
 }
 
 .banner-title-container h1 {
-    font-size: 60px;
+    font-size: 67px;
     font-weight: 800;
     text-transform: uppercase;
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    padding-bottom: 15px;
 }
 
-.banner-title-container p{
+.banner-title-container p {
     color: #534C64;
-font-size: 16px;
-font-weight: 500;
-line-height: normal;
-text-transform: lowercase;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: lowercase;
+    padding-bottom: 10px;
 }
+
+.banner-info{
+    padding-bottom: 20px;
+}
+
+.banner-title-container .signin{
+    border: none;
+    outline: none;
+    border-radius: 48px;
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+    color: #FFF;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 15px 27px;
+}
+
+.banner-title-container .go-rouge{
+    border: none;
+    outline: none;
+    border-radius: 48px;
+    background:#3db3e6;
+    color: #FFF;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 15px 25px;
+}
+
