--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,7 @@ nav {
     min-height: 300px;
     display: flex;
     align-items: center;
+    margin-bottom: 100px;
 }
 
 .banner-title-container {
@@ -164,3 +165,56 @@ nav {
     cursor: pointer;
 }
 
+/* funny games section start from here */
+.funny-games-section{
+    max-width: 1100px;
+    margin: 0px auto;
+}
+
+.funny-games-title{
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+.funny-games-title h3{
+    color: #0B0223;
+font-size: 32px;
+font-weight: 700;
+padding-bottom: 10px;
+}
+
+.funny-games-title p{
+    color: #534C64;
+font-weight: 400;
+font-size: 14px;
+}
+
+.funny-games-title span{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
+.video-container{
+    min-height: 300px;
+    display:flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.video-single{
+    width:213px;
+    min-height: 350px;
+}
+
+.video-single img{
+    height: 264px;
+    width: 100%;
+    padding-bottom: 12px;
+}
+
+.video-single p{
+    font-size: 13px;
+    line-height: 19px;
+}
