--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ nav {
     font-weight: 700;
 }
 
-.logo-container span {
+.logo-container span, .footer-title span {
     color: #FF42A5;
 }
 
@@ -84,7 +84,7 @@ nav {
     background-image: url(../images/Group\ 14.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: -660px 0px;
+    background-position: -622px 0px;
 }
 
 .banner-container {
@@ -390,6 +390,7 @@ nav {
     justify-content: center;
     align-content: center;
     row-gap: 20px;
+    column-gap: 0px;
 }
 .single-game-option{
     width: fit-content;
@@ -413,10 +414,97 @@ font-weight: 600;
 }
 .single-game-option:hover{
     border: 1px solid #F948B2;
+    cursor: pointer;
 
 }
 
 .single-game-option:hover p{
    color:#F948B2;
 
+}
+
+/* footer-section starts from here */
+.footer-container{
+   display: grid;
+   justify-content: center;
+   align-content: center;
+   text-align: center;
+}
+
+.footer-section{
+    min-height: 420px;
+    background-color:#0B0223;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.footer-option, li{
+    list-style: none;
+    color: #FFF;
+text-align: center;
+font-size: 18px;
+font-weight: 600;
+margin-bottom: 14px;
+}
+
+.footer-privacy> li{
+    list-style: none;
+    margin-bottom: 25px;
+}
+
+.footer-title > img{
+    width: 60px;
+}
+
+.footer-title > h2{
+   color: white;
+   font-size: 30px;
+  
+}
+
+.link{
+    font-size: 30px;
+    color: white;
+}
+
+.footer-title{
+    display: flex;
+    justify-content:center;
+    gap: 8px;
+    margin-bottom: 25px;
+}
+
+.footer-option{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 10px;
+}
+
+.social-media-link {
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 25px;
+margin-bottom: 41px;
+}
+
+.footer-privacy{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    
+}
+.footer-privacy > li, .copyright{
+    color: rgba(255, 255, 255, 0.60);
+text-align: center;
+font-size: 16px;
+font-weight: 500;
+}
+.copyright > p{
+    margin-top: -10px;
+}
+
+.footer-option > li, .footer-privacy > li{
+    cursor: pointer;
 }
