--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,8 @@ nav {
     font-weight: 700;
 }
 
-.logo-container span, .footer-title span {
+.logo-container span,
+.footer-title span {
     color: #FF42A5;
 }
 
@@ -93,7 +94,7 @@ nav {
     min-height: 300px;
     display: flex;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 40px;
 }
 
 .banner-title-container {
@@ -382,7 +383,7 @@ nav {
     align-items: center;
 }
 
-.game-option-container{
+.game-option-container {
     max-width: 1000px;
     margin: 0px auto;
     display: flex;
@@ -392,7 +393,8 @@ nav {
     row-gap: 20px;
     column-gap: 0px;
 }
-.single-game-option{
+
+.single-game-option {
     width: fit-content;
     display: flex;
     align-items: center;
@@ -400,111 +402,196 @@ nav {
     gap: 10px;
     background-color: #FFF;
     border-radius: 50px;
-    padding:5px 10px
+    padding: 5px 10px
 }
 
-.single-game-option > p{
+.single-game-option>p {
     color: #0B0223;
-font-weight: 600;
+    font-weight: 600;
 }
 
-.single-game-option > img{
+.single-game-option>img {
     width: 50px;
     height: 50px;
 }
-.single-game-option:hover{
+
+.single-game-option:hover {
     border: 1px solid #F948B2;
     cursor: pointer;
 
 }
 
-.single-game-option:hover p{
-   color:#F948B2;
+.single-game-option:hover p {
+    color: #F948B2;
 
 }
 
 /* footer-section starts from here */
-.footer-container{
-   display: grid;
-   justify-content: center;
-   align-content: center;
-   text-align: center;
+.footer-container {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
 }
 
-.footer-section{
+.footer-section {
     min-height: 420px;
-    background-color:#0B0223;
+    background-color: #0B0223;
     display: flex;
     justify-content: center;
     text-align: center;
 }
-.footer-option, li{
+
+.footer-option,
+li {
     list-style: none;
     color: #FFF;
-text-align: center;
-font-size: 18px;
-font-weight: 600;
-margin-bottom: 14px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 14px;
 }
 
-.footer-privacy> li{
+.footer-privacy>li {
     list-style: none;
     margin-bottom: 25px;
 }
 
-.footer-title > img{
+.footer-title>img {
     width: 60px;
 }
 
-.footer-title > h2{
-   color: white;
-   font-size: 30px;
-  
+.footer-title>h2 {
+    color: white;
+    font-size: 30px;
+
 }
 
-.link{
+.link {
     font-size: 30px;
     color: white;
 }
 
-.footer-title{
+.footer-title {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     gap: 8px;
     margin-bottom: 25px;
 }
 
-.footer-option{
+.footer-option {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     column-gap: 10px;
 }
 
 .social-media-link {
-display: flex;
-align-items: center;
-justify-content: center;
-gap: 25px;
-margin-bottom: 41px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+    margin-bottom: 41px;
 }
 
-.footer-privacy{
+.footer-privacy {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 30px;
-    
+
 }
-.footer-privacy > li, .copyright{
+
+.footer-privacy>li,
+.copyright {
     color: rgba(255, 255, 255, 0.60);
-text-align: center;
-font-size: 16px;
-font-weight: 500;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
 }
-.copyright > p{
+
+.copyright>p {
     margin-top: -10px;
 }
 
-.footer-option > li, .footer-privacy > li{
+.footer-option>li,
+.footer-privacy>li {
     cursor: pointer;
+}
+
+/* footer section ends here */
+
+/* we are gamer section start from here */
+.we-are-gamer-section {
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    margin-bottom: 100px;
+
+}
+
+.we-are-gamer-container {
+    max-width: 1100px;
+    margin: 0px auto;
+    min-height: 420px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    /* justify-content: space-between; */
+}
+
+.we-are-gamer-image {
+    width: 60%;
+}
+
+.we-are-gamer-title {
+    text-align: right;
+}
+
+.we-are-gamer-image>img {
+    width: 100%;
+    height: 100%;
+}
+
+.we-are-gamer-title>h2 {
+    text-align: right;
+    font-size: 36px;
+    font-weight: 700;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 20px;
+}
+
+.we-are-gamer-title > p{
+    color: #534C64;
+text-align: right;
+font-weight: 400;
+line-height: 30px;
+margin-bottom: 20px;
+}
+
+.we-are-gamer-title button{
+    border: none;
+    outline: none;
+    border-radius: 48px;
+    background: linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%);
+    color: #FFF;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 15px 27px;
+   align-self: right;
+   margin-bottom: 20px;
+}
+
+.we-are-gamer-title h4{
+    color: #534C64;
+text-align: right;
+font-size: 20px;
+font-weight: 500;
+margin-bottom: 5px;
+}
+
+.we-are-gamer-title h3{
+    color: #534C64;
+font-size: 26px;
+font-weight: 700;
 }
