--- a/styles/mobileresponsive.css
+++ b/styles/mobileresponsive.css
@@ -48,13 +48,16 @@
     .banner-image-container img {
         padding-bottom: 50px;
     }
-    .banner-title-container h1{
+
+    .banner-title-container h1 {
         font-size: 59px;
     }
-    .banner-title-container h3{
+
+    .banner-title-container h3 {
         font-size: 30px;
     }
-    .banner-title-container p{
+
+    .banner-title-container p {
         font-size: 15px;
     }
 
@@ -180,46 +183,102 @@
     li {
         font-size: 12px;
     }
-    .link{
+
+    .link {
         font-size: 18px;
-       
+
     }
-    .footer-privacy{
+
+    .footer-privacy {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 0px;
-        
+
     }
 
-    .footer-privacy > li, .copyright{
-    font-size: 9px;
+    .footer-privacy>li,
+    .copyright {
+        font-size: 9px;
     }
 
-    .footer-privacy> li{
+    .footer-privacy>li {
         margin-bottom: 10px;
     }
-.copyright{
-    margin-top: 20px;
-}
 
-/* we are gamer section start from here */
-.we-are-gamer-container {
-   flex-direction: column;
-}
-.we-are-gamer-image {
-    width: 100%;
-}
-.we-are-gamer-title, .we-are-gamer-title>h2, .we-are-gamer-title > p, .we-are-gamer-title button, .we-are-gamer-title h4 {
-    text-align: center;
-}
-.we-are-gamer-title>h2{
-    font-size: 33px;
-}
-.we-are-gamer-title h3{
-    font-size: 23px;
-    padding-bottom: 30px;
-}
-.we-are-gamer-title p{
-    font-size: 12px;
+    .copyright {
+        margin-top: 20px;
+    }
+
+    /* we are gamer section start from here */
+    .we-are-gamer-container {
+        flex-direction: column;
+    }
+
+    .we-are-gamer-image {
+        width: 100%;
+    }
+
+    .we-are-gamer-title,
+    .we-are-gamer-title>h2,
+    .we-are-gamer-title>p,
+    .we-are-gamer-title button,
+    .we-are-gamer-title h4 {
+        text-align: center;
+    }
+
+    .we-are-gamer-title>h2 {
+        font-size: 33px;
+    }
+
+    .we-are-gamer-title h3 {
+        font-size: 23px;
+        padding-bottom: 30px;
+    }
+
+    .we-are-gamer-title p {
+        font-size: 12px;
+    }
+
+    /* career section starts from here */
+    .career-title {
+        width: 100%;
+    }
+
+    .career-image {
+        width: 100%;
+    }
+
+    .career-container {
+        flex-direction: column;
+    }
+
+    .career-info-container {
+
+        text-align: center;
+    }
+
+    .career-image>img {
+        width: 120%;
+        height: 100%;
+    }
+
+    .career-section{
+        padding-top: 50px;
+    }
+
+    .career-info,
+    .career-info2,
+    .career-title>h3,
+    p {
+        text-align: center;
+    }
+
+    .careers-btn {
+        align-self: center;
+        margin-bottom: 30px;
+    }
+.careers-btn-container{
+    display: flex;
+    justify-content: center;
 }
 }
