--- a/styles/style.css
+++ b/styles/style.css
@@ -214,7 +214,6 @@ nav {
 .video-single img {
     height: 264px;
     width: 100%;
-    padding-bottom: 12px;
     opacity: 1;
     display: block;
     transition: .5s ease;
@@ -224,19 +223,28 @@ nav {
 .video-single p {
     font-size: 13px;
     line-height: 19px;
+    padding-top: 12px;
 }
 
 .middle {
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    transform: translate(100%, -217%);
+    transform: translate(68%, -298%);
     text-align: center;
+}
+
+.image-container:hover{
+    border: 3px solid #FF42A5;
+    border-radius: 13px;
 }
 
 .image-container:hover .image {
     border-radius: 10px;
     opacity: 0.3;
+    background-color: black;
+    background-blend-mode: overlay;
+    
 }
 
 .image-container:hover .middle {
@@ -250,6 +258,13 @@ nav {
 .text {
     color: #FF42A5;
 }
+.fa-play{
+    border: 2px solid white;
+    color: white;
+    border-radius: 50px;
+    padding: 6px 7px 5px 8px;
+}
+
 
 /* play-instantly-section starts from here */
 .play-instantly-section {
